update qa tech docs tool name info

--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -87,7 +87,7 @@ The AI Chat agent has access to 20 specialized tools organized into these catego
 
 **Project Information:** get-applications, generate-project-context
 
-**Help & Support:** get-qatech-docs, contact-customer-support
+**Help & Support:** search-qatech-docs, contact-customer-support
 
 **Advanced:** handover-to-different-agent (automatically switches between specialized agents based on your needs)
 </Note>
