docs: add cross-reference from Start Run API to GitHub Actions
**Problem:**
- start-run.mdx had GitHub Actions example but no link to full guide
- github-actions.mdx links to start-run.mdx, but link wasn't bidirectional

**Solution:**
- Added <Note> after GitHub Actions curl example
- Links to /configuration/github-actions for complete guide
- Creates bidirectional cross-reference network

**Cross-reference network now complete:**
✓ github-actions.mdx → start-run.mdx
✓ start-run.mdx → github-actions.mdx
✓ github-actions.mdx ↔ github-app.mdx
✓ All GitHub integration docs interconnected

--- a/api-reference/start-run.mdx
+++ b/api-reference/start-run.mdx
@@ -184,6 +184,10 @@ jobs:
             }'
 ```
 
+<Note>
+For a complete guide to GitHub Actions integration including the official QA.tech action and additional examples, see [GitHub Actions](/configuration/github-actions).
+</Note>
+
 ## OpenAPI Specification
 
 For detailed API schema and additional examples, refer to the [OpenAPI specification](/api-reference/api.json).
