docs: fix AI Chat Assistant tools list to match codebase
**Problem:**
- Docs claimed "20+ specialized tools" but chat agent has 16
- Listed tools that chat doesn't have:
  * suggest-test-cases (only for explorative agent)
  * run-test-cases (only for explorative agent)
  * get-github-pull-request (not in chat's sharedTools)
  * add-github-pull-request-review (not in chat's sharedTools)
- Wrong tool names:
  * get-applications → get-application-details
  * get-qatech-docs → search-qatech-docs
- Had "GitHub Integration" category with tools chat doesn't have

**Solution - Code-Verified Update:**

Verified against:
- packages/chat-helpers/src/tool-names/tool-names.ts (lines 51-72)
- packages/mcp/src/agents/chat-agent.ts (line 26: sharedTools + uiTools)

Corrected to 16 actual tools:
- Test Management (5): removed suggest/run-test-cases
- Application Analysis (3): correct
- Configuration (3): correct
- Project Information (2): fixed get-application-details name
- Help & Support (2): fixed search-qatech-docs name
- Advanced (1): correct
- Removed "GitHub Integration" category (those tools not available)

All tool names now match actual codebase.

--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -74,20 +74,18 @@ Just describe what you want naturally—the system routes to the right specialis
 
 ## Available Tools Reference
 
-The AI Chat agent has access to 20 specialized tools organized into these categories:
+The AI Chat agent has access to 16 specialized tools organized into these categories:
 
 <Note>
-**Test Management:** get-test-cases, get-test-case-details, get-test-scenarios, get-test-plan-info, suggest-test-cases, run-test-cases, wait-for-run
+**Test Management:** get-test-cases, get-test-case-details, get-test-scenarios, get-test-plan-info, wait-for-run
 
 **Application Analysis:** analyze-site, search-feature-graph, search-knowledge-base
 
 **Configuration:** get-configs-info, create-config, request-config-details
 
-**GitHub Integration:** get-github-pull-request, add-github-pull-request-review
+**Project Information:** get-application-details, generate-project-context
 
-**Project Information:** get-applications, generate-project-context
-
-**Help & Support:** get-qatech-docs, contact-customer-support
+**Help & Support:** search-qatech-docs, contact-customer-support
 
 **Advanced:** handover-to-different-agent (automatically switches between specialized agents based on your needs)
 </Note>
