--- a/core-concepts/applications-and-environments.mdx
+++ b/core-concepts/applications-and-environments.mdx
@@ -97,6 +97,10 @@ For products with multiple services (e.g., user frontend, admin site, etc), you 
 - Create separate applications for each service
 - Test service interactions across different environments
 
+<Note>
+  **Testing across applications:** When creating test dependencies between different applications, use **Wait For** dependencies to pass data between tests. Browser state (login sessions, cookies) cannot transfer across different domains. See [Test Dependencies](/core-concepts/dependencies#application-and-environment-constraints) for details.
+</Note>
+
 ### Feature Branch Testing
 
 - Create _preview_ environments for feature branches
