Remove /dashboard path segment

--- a/best-practices/running-tests.mdx
+++ b/best-practices/running-tests.mdx
@@ -7,7 +7,7 @@ Tests in QA.tech can be run in several ways.
 
 ## Trigger a Run from the UI
 
-The simplest way to get started is to use the "Run Tests" button found on the [Dashboard](https://app.qa.tech/dashboard/current-project) or the [Test Cases](https://app.qa.tech/dashboard/current-project/scenarios) page.
+The simplest way to get started is to use the "Run Tests" button found on the [Dashboard](https://app.qa.tech/current-project) or the [Test Cases](https://app.qa.tech/current-project/scenarios) page.
 
 You can also run individual tests by navigating to the test and clicking **Run Test**.
 
@@ -42,7 +42,7 @@ If you want your tests to run at a specific time, such as on a recurring weekly 
 
 <Steps>
   <Step title="Navigate to Test Plans">
-    Go to [Test Plans](https://app.qa.tech/dashboard/current-project/test-plans)
+    Go to [Test Plans](https://app.qa.tech/current-project/test-plans)
     in your project dashboard.
   </Step>
   <Step title="Select or Create a Test Plan">
