--- a/core-concepts/crawling.mdx
+++ b/core-concepts/crawling.mdx
@@ -17,7 +17,7 @@ Manual crawling allows you to explore specific areas of your application. Use th
 - Updating navigation or UI structure
 - Improving test coverage for critical user journeys
 
-Navigate to [**Settings → Crawling**](https://app.qa.tech/dashboard/current-project/settings/crawling) to access the Crawling Sessions page.
+Navigate to [**Settings → Crawling**](https://app.qa.tech/current-project/settings/crawling) to access the Crawling Sessions page.
 
 ## Configuration
 
@@ -30,7 +30,7 @@ Resume from a test case's final browser state. Useful for:
 
 ### Start URL
 
-The URL where crawling begins (e.g., `https://app.example.com/dashboard`).
+The URL where crawling begins (e.g., `https://app.example.com`).
 
 ### Maximum Depth
 
