Document device preset chat feature
Add documentation for the new get-device-presets chat tool that allows users to discover and work with device presets through the AI Chat Assistant.

Changes:
- Add 'Using Device Presets in AI Chat' section to device-presets.mdx
  - Example: Creating tests with specific device presets
  - Example: Running tests with device preset overrides
  - Discovery queries for available presets
- Update ai-chat-assistant.mdx tool reference
  - Add get-device-presets to Project Information category
  - Update tool count from 16 to 17
  - Add example query 'What devices can I test on?'

All examples verified against actual tool implementations.

--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -23,6 +23,7 @@ It may take a bit of time to get the taste of using it, but you can start treati
 
 - Does QA.tech support cross-browser testing?
 - How do I add a dependency to a test?
+- What devices can I test on?
 </Tip>
 
 
@@ -74,7 +75,7 @@ Just describe what you want naturally—the system routes to the right specialis
 
 ## Available Tools Reference
 
-The AI Chat agent has access to 16 specialized tools organized into these categories:
+The AI Chat agent has access to 17 specialized tools organized into these categories:
 
 <Note>
 **Test Management:** get-test-cases, get-test-case-details, get-test-scenarios, get-test-plan-info, wait-for-run
@@ -83,7 +84,7 @@ The AI Chat agent has access to 16 specialized tools organized into these catego
 
 **Configuration:** get-configs-info, create-config, request-config-details
 
-**Project Information:** get-application-details, generate-project-context
+**Project Information:** get-application-details, get-device-presets, generate-project-context
 
 **Help & Support:** search-qatech-docs, contact-customer-support
 
